# tap-parquet

./: .gitignore  README.md  meltano.yml  pyproject.toml
tap_parquet/: __main__.py  streams.py  tap.py
tap_parquet/tests/: test_parquet_methods.py
