[tool.poetry]
name = "tap-parquet"
version = "0.1.0"
description = "`tap-parquet` is Singer tap for Parquet, built with the Singer SDK."
authors = ["Aaron Steers <aj@meltano.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
singer-sdk = "^0.33.1"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = {version = "^23.11.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-parquet = 'tap_parquet.tap:cli'
